<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tx_container_id_leading"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/container_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_container_id"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tx_container_id_leading"
        android:layout_alignBaseline="@id/tx_container_id_leading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/active_connection_count_leading"
        android:text="@string/active_connection_count"
        android:layout_alignBaseline="@id/tx_container_id_leading"
        android:layout_toStartOf="@id/active_connection_count"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/active_connection_count"
        android:layout_alignBaseline="@id/tx_container_id_leading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tx_container_lat_leading"
        android:layout_below="@+id/tx_container_id_leading"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/container_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_container_lat"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tx_container_lat_leading"
        android:layout_alignBaseline="@id/tx_container_lat_leading"
        android:layout_width="80dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_container_lng_leading"
        android:layout_alignBaseline="@id/tx_container_lat_leading"
        android:layout_toEndOf="@id/tx_container_lat"
        android:text="@string/container_lng"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_container_lng"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/tx_container_lng_leading"
        android:layout_alignBaseline="@id/tx_container_lat_leading"
        android:layout_width="80dp"
        android:layout_height="wrap_content"/>

    <View
        android:layout_below="@id/tx_container_lat_leading"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>